--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "5.17.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -37,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/supabase-js": "^2.45.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -62,7 +62,6 @@
     "@types/react-dom": "^19.2.1",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
-    "prisma": "5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
