--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -21,7 +22,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.407.0",
+    "framer-motion": "^11.2.4",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "0.407.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +34,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
