--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "framer-motion": "^11.2.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "0.407.0",
-    "next": "14.2.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.24",
-    "@types/react": "18.2.61",
-    "@types/react-dom": "18.2.19",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "postcss": "^8",
     "supabase": "^1.123.0",
     "tailwindcss": "^3.3.0",
